# python-semver

./: pyproject.toml
.github/workflows/: test.yml
src/python_semver/: __init__.py  version.py
tests/: test_version.py
