[project]
name = "python-semver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shinsuke-mat", email = "shinsuke-mat@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
